--- a/.github/workflows/OWASP.yaml
+++ b/.github/workflows/OWASP.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.1
         with:
-          ref: master
+          ref: main
 
       - name: ZAP Scan
         uses: zaproxy/action-baseline@v0.10.0
